switch from concat to file

--- a/templates/unit.template.erb
+++ b/templates/unit.template.erb
@@ -2,3 +2,10 @@
 Description=<%= @description %>
 After=<%= @after %>
 Requires=<%= @requires %
+[Service]
+<%= @execstartpre.each do |exec| -%>
+ExecStartPre=<%= exec %>
+<% end -%>
+ExecStart=<%= @execstart %>
+RestartSec=<%= @restartsec %>
+Restart=<%= @restart %>
