--- a/templates/unit.template.erb
+++ b/templates/unit.template.erb
@@ -1,9 +1,9 @@
 [Unit]
 Description=<%= @description %>
 After=<%= @after %>
-Requires=<%= @requires %
+Requires=<%= @requires %>
 [Service]
-<%= @execstartpre.each do |exec| -%>
+<% @execstartpre.each do |exec| -%>
 ExecStartPre=<%= exec %>
 <% end -%>
 ExecStart=<%= @execstart %>
