--- a/templates/unit.template.erb
+++ b/templates/unit.template.erb
@@ -1,16 +1,16 @@
 [Unit]
 Description=<%= @description %>
 <% [@after].each do |afr| -%>
-After=<%= @afr %>
+After=<%= afr %>
 <% end -%>
 <% [@requires].each do |req| -%>
-Requires=<%= @req %>
+Requires=<%= req %>
 <% end -%>
 [Service]
 <% [@execstartpre].each do |exp| -%>
 ExecStartPre=<%= exp %>
 <% end -%>
 ExecStart=<%= @execstart %>
-<% if @restartsec -%>RestartSec=<%= @restartsec %><% end -%>
-<% if @restart -%>Restart=<%= @restart %><% end -%>
-<% if @wantedby -%>WantedBy=<%= @wantedby %><% end -%>
+<% if @restartsec %>RestartSec=<%= @restartsec %><% end -%>
+<% if @restart %>Restart=<%= @restart %><% end -%>
+<% if @wantedby %>WantedBy=<%= @wantedby %><% end -%>
