--- a/templates/unit.template.erb
+++ b/templates/unit.template.erb
@@ -1,7 +1,7 @@
 [Unit]
 Description=<%= @description %>
-<% @after.each -%>
-<% do |after| %>After=<%= after %>
+<% @after.each do |after| -%>
+After=<%= after %>
 <% end -%>
 <% [@requires].each do |req| -%>
 Requires=<%= req %>
