--- a/templates/unit.template.erb
+++ b/templates/unit.template.erb
@@ -3,11 +3,11 @@ Description=<%= @description %>
 <% @after.each do |after| -%>
 After=<%= after %>
 <% end -%>
-<% [@requires].each do |req| -%>
+<% @requires.each do |req| -%>
 Requires=<%= req %>
 <% end -%>
 [Service]
-<% [@execstartpre].each do |exp| -%>
+<% @execstartpre.each do |exp| -%>
 ExecStartPre=<%= exp %>
 <% end -%>
 ExecStart=<%= @execstart %>
